# MonarqueFS

./: .gitignore  Cargo.toml  README.md
gestionnaire_fichiers/: Cargo.toml
gestionnaire_fichiers/src/: administration.rs  arborescence.rs  lib.rs  mise_a_jour.rs  privileges.rs  session.rs  surveillance.rs
graphity/: graphity.json
interface_graphique/: Cargo.toml
interface_graphique/src/: application.rs  gestionnaire.rs  main.rs  theme.rs
noyau_partition/: Cargo.toml
noyau_partition/src/: disque.rs  erreurs.rs  lib.rs  table_partition.rs
outils_cli/: Cargo.toml
outils_cli/src/: commandes.rs  installation.rs  main.rs  veille.rs
specification/: architecture.md  chiffrement.md  table_partition.md  volume_monarque.md
systeme_fichiers/: Cargo.toml
systeme_fichiers/src/: bitmap.rs  bloc.rs  dossier.rs  erreurs.rs  index.rs  inode.rs  lib.rs  stockage.rs  superbloc.rs  volume.rs
systeme_fichiers/src/chiffrement/: aead.rs  alea.rs  chacha20.rs  derivation.rs  mod.rs  poly1305.rs  sha256.rs
systeme_fichiers/tests/: volume.rs
